--- a/index.html
+++ b/index.html
@@ -34,10 +34,20 @@
           </nav>
           <ul class="list-feedback">
             <li class="feedback mail">
-              <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="header-mail" href="mailto:info@devstudio.com"
+                ><svg class="icon icon-mail" width="16" height="12">
+                  <use xlink:href="./images/sprite.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com</a
+              >
             </li>
             <li class="feedback numb">
-              <a class="header-numb" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="header-numb" href="tel:+380961111111"
+                ><svg class="icon icon-phone" width="16" height="12">
+                  <use xlink:href="./images/sprite.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
@@ -124,31 +134,31 @@
               <div class="team-box">
                 <h3 class="title-team">Ігор Дем'яненко</h3>
                 <p class="text-team">Product Designer</p>
-                <ul>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-instagram1">
+                <ul class="icons-teams">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-instagram1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-twitter1">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-twitter1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-facebook1">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-facebook1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-linkedin1">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-linkedin1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -166,31 +176,31 @@
               <div class="team-box">
                 <h3 class="title-team">Ольга Рєпіна</h3>
                 <p class="text-team">Frontend Developer</p>
-                <ul>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-instagram1">
+                <ul class="icons-teams">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-instagram1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-twitter1">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-twitter1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-facebook1">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-facebook1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-linkedin1">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-linkedin1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -203,31 +213,31 @@
               <div class="team-box">
                 <h3 class="title-team">Микола Тарасов</h3>
                 <p class="text-team">Marketing</p>
-                <ul>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-instagram1">
+                <ul class="icons-teams">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-instagram1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-twitter1">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-twitter1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-facebook1">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-facebook1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-linkedin1">
+                  <li class="icon-team">
+                    <a href="#" class="icon-team-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="icon icon-linkedin1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -245,31 +255,31 @@
               <div class="team-box">
                 <h3 class="title-team">Михайло Єрмаков</h3>
                 <p class="text-team">UI Designer</p>
-                <ul>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-instagram1">
+                <ul class="icons-teams">
+                  <li class="icon-team">
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="icon-team-link">
+                      <svg class="icon icon-instagram1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-twitter1">
+                  <li class="icon-team">
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="icon-team-link">
+                      <svg class="icon icon-twitter1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-facebook1">
+                  <li class="icon-team">
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="icon-team-link">
+                      <svg class="icon icon-facebook1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icons-teams">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <svg class="icon icon-linkedin1">
+                  <li class="icon-team">
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="icon-team-link">
+                      <svg class="icon icon-linkedin1" width="20" height="20">
                         <use xlink:href="./images/sprite.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -283,45 +293,45 @@
       <section class="section">
         <div class="container">
           <h2 class="title-clients">Постійні клієнти</h2>
-          <ul>
-            <li class="icons-clients">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <svg class="icon icon-client1">
+          <ul class="icons-clients">
+            <li class="icon-client">
+              <a href="#" class="icon-client-link" target="_blank" rel="noopener noreferrer">
+                <svg class="icon icon-client1" width="41" height="48">
                   <use xlink:href="./images/sprite.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
-            <li class="icons-clients">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <svg class="icon icon-client2">
+            <li class="icon-client">
+              <a href="#" class="icon-client-link" target="_blank" rel="noopener noreferrer">
+                <svg class="icon icon-client2" width="40" height="52">
                   <use xlink:href="./images/sprite.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
-            <li class="icons-clients">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <svg class="icon icon-client3">
+            <li class="icon-client">
+              <a href="#" class="icon-client-link" target="_blank" rel="noopener noreferrer">
+                <svg class="icon icon-client3" width="44" height="41">
                   <use xlink:href="./images/sprite.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
-            <li class="icons-clients">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <svg class="icon icon-client4">
+            <li class="icon-client">
+              <a href="#" class="icon-client-link" target="_blank" rel="noopener noreferrer">
+                <svg class="icon icon-client4" width="85" height="41">
                   <use xlink:href="./images/sprite.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
-            <li class="icons-clients">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <svg class="icon icon-client5">
+            <li class="icon-client">
+              <a href="#" class="icon-client-link" target="_blank" rel="noopener noreferrer">
+                <svg class="icon icon-client5" width="63" height="46">
                   <use xlink:href="./images/sprite.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
-            <li class="icons-clients">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <svg class="icon icon-client6">
+            <li class="icon-client">
+              <a href="#" class="icon-client-link" target="_blank" rel="noopener noreferrer">
+                <svg class="icon icon-client6" width="94" height="44">
                   <use xlink:href="./images/sprite.svg#icon-client6"></use>
                 </svg>
               </a>
@@ -332,59 +342,61 @@
     </main>
     <footer class="section footer">
       <div class="container">
-        <div class="footer-box">
-          <a href="index.html" class="footer-logo">Web<span class="logo-secondary">Studio</span></a>
-          <address>
-            <ul class="footer-list">
-              <li class="addrres">
-                <a
-                  class="map"
-                  href="https://www.google.com.ua/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4264658,30.5364282,16.75z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
-              </li>
-              <li class="feedback-footer">
-                <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="feedback-footer">
-                <a class="footer-numb" href="tel:+380961111111">+38 096 111 11 11</a>
-              </li>
-            </ul>
-            <h2 class="footer-title">приєднуйтесь</h2>
-            <ul>
-              <li class="icons-footer">
-                <a href="#" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon icon-instagram1">
+        <!-- <div class="footer-box"> -->
+        <a href="index.html" class="footer-logo">Web<span class="logo-secondary">Studio</span></a>
+        <address>
+          <ul class="footer-list">
+            <li class="addrres">
+              <a
+                class="map"
+                href="https://www.google.com.ua/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4264658,30.5364282,16.75z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk"
+                target="_blank"
+                rel="noopener noreferrer"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="feedback-footer">
+              <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="feedback-footer">
+              <a class="footer-numb" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+          <div class="social">
+            <p class="social-title">приєднуйтесь</p>
+            <ul class="icons-footer">
+              <li class="icon-footer">
+                <a href="#" class="icon-footer-link" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon icon-instagram1" width="20" height="20">
                     <use xlink:href="./images/sprite.svg#icon-instagram1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icons-footer">
-                <a href="#" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon icon-twitter1">
+              <li class="icon-footer">
+                <a href="#" class="icon-footer-link" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon icon-twitter1" width="20" height="20">
                     <use xlink:href="./images/sprite.svg#icon-twitter1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icons-footer">
-                <a href="#" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon icon-facebook1">
+              <li class="icon-footer">
+                <a href="#" class="icon-footer-link" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon icon-facebook1" width="20" height="20">
                     <use xlink:href="./images/sprite.svg#icon-facebook1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icons-footer">
-                <a href="#" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon icon-linkedin1">
+              <li class="icon-footer">
+                <a href="#" class="icon-footer-link" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon icon-linkedin1" width="20" height="20">
                     <use xlink:href="./images/sprite.svg#icon-linkedin1"></use>
                   </svg>
                 </a>
               </li>
             </ul>
-          </address>
-        </div>
+          </div>
+        </address>
+        <!-- </div> -->
       </div>
     </footer>
   </body>
