--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             </ul>
           </nav>
           <ul class="list-feedback">
-            <li class="feedback mail">
-              <a class="header-mail" href="mailto:info@devstudio.com"
+            <li class="feedback">
+              <a class="header-link-feedback" href="mailto:info@devstudio.com"
                 ><svg class="icon icon-mail" width="16" height="12">
                   <use xlink:href="./images/sprite.svg#icon-mail"></use>
                 </svg>
                 info@devstudio.com</a
               >
             </li>
-            <li class="feedback numb">
-              <a class="header-numb" href="tel:+380961111111"
+            <li class="feedback">
+              <a class="header-link-feedback" href="tel:+380961111111"
                 ><svg class="icon icon-phone" width="16" height="12">
                   <use xlink:href="./images/sprite.svg#icon-phone"></use>
                 </svg>
