--- a/portfolio.html
+++ b/portfolio.html
@@ -32,13 +32,24 @@
           </ul>
         </nav>
         <ul class="list-feedback">
-          <li class="feedback">
-            <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="feedback">
-            <a class="header-numb" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
+            <li class="feedback">
+              <a class="header-link-feedback" href="mailto:info@devstudio.com"
+                ><svg class="icon icon-mail" width="16" height="12">
+                  <use xlink:href="./images/sprite.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com</a
+              >
+            </li>
+            <li class="feedback">
+              <a class="header-link-feedback" href="tel:+380961111111"
+                ><svg class="icon icon-phone" width="16" height="12">
+                  <use xlink:href="./images/sprite.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -170,28 +181,63 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="container footer-box">
-        <a href="index.html" class="footer-logo">Web<span class="logo-secondary">Studio</span></a>
-        <address>
-          <ul class="footer-list">
-            <li class="addrres">
-              <a
-                class="map"
-                href="https://www.google.com.ua/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4264658,30.5364282,16.75z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk"
-                target="_blank"
-                rel="noopener noreferrer"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+    <footer class="section footer">
+      <div class="container container-band">
+        <div class="footer-box">
+          <a href="index.html" class="footer-logo">Web<span class="logo-secondary">Studio</span></a>
+          <address>
+            <ul class="footer-list">
+              <li class="addrres">
+                <a
+                  class="map"
+                  href="https://www.google.com.ua/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4264658,30.5364282,16.75z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="feedback-footer">
+                <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="feedback-footer">
+                <a class="footer-numb" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social">
+          <p class="social-title">приєднуйтесь</p>
+          <ul class="icons-footer">
+            <li class="icon-footer">
+              <a href="#" class="icon-footer-link" target="_blank" rel="noopener noreferrer">
+                <svg class="icon icon-instagram1" width="20" height="20">
+                  <use xlink:href="./images/sprite.svg#icon-instagram1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="feedback-footer">
-              <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="icon-footer">
+              <a href="#" class="icon-footer-link" target="_blank" rel="noopener noreferrer">
+                <svg class="icon icon-twitter1" width="20" height="20">
+                  <use xlink:href="./images/sprite.svg#icon-twitter1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="feedback-footer">
-              <a class="footer-numb" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="icon-footer">
+              <a href="#" class="icon-footer-link" target="_blank" rel="noopener noreferrer">
+                <svg class="icon icon-facebook1" width="20" height="20">
+                  <use xlink:href="./images/sprite.svg#icon-facebook1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-footer">
+              <a href="#" class="icon-footer-link" target="_blank" rel="noopener noreferrer">
+                <svg class="icon icon-linkedin1" width="20" height="20">
+                  <use xlink:href="./images/sprite.svg#icon-linkedin1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
