--- a/portfolio.html
+++ b/portfolio.html
@@ -32,29 +32,28 @@
           </ul>
         </nav>
         <ul class="list-feedback">
-            <li class="feedback">
-              <a class="header-link-feedback" href="mailto:info@devstudio.com"
-                ><svg class="icon icon-mail" width="16" height="12">
-                  <use xlink:href="./images/sprite.svg#icon-mail"></use>
-                </svg>
-                info@devstudio.com</a
-              >
-            </li>
-            <li class="feedback">
-              <a class="header-link-feedback" href="tel:+380961111111"
-                ><svg class="icon icon-phone" width="16" height="12">
-                  <use xlink:href="./images/sprite.svg#icon-phone"></use>
-                </svg>
-                +38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </div>
+          <li class="feedback">
+            <a class="header-link-feedback" href="mailto:info@devstudio.com"
+              ><svg class="icon icon-mail" width="16" height="12">
+                <use xlink:href="./images/sprite.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="feedback">
+            <a class="header-link-feedback" href="tel:+380961111111"
+              ><svg class="icon icon-phone" width="16" height="12">
+                <use xlink:href="./images/sprite.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <main>
       <section class="section portfolio">
-        <div class="container filters-box">
+        <div class="container">
           <h1 class="title-primary">Фільтри</h1>
           <ul class="filters">
             <li><button class="btn-filters" type="button">Усі</button></li>
